--- a/UE/Praxes/Catarina.html
+++ b/UE/Praxes/Catarina.html
@@ -10,7 +10,7 @@
         <div class ="box">
        <!--<h1 class="pergunta">Tu es Chata <br>Mas eu adoro-te
        </h1>-->
-            <h1>Ja esta conas</h1>
+            <h1>Qual é que não sabes maçarico</h1>
         
 </div>
         </body>
