--- a/Boemio/Localização.html
+++ b/Boemio/Localização.html
@@ -8,27 +8,27 @@
 <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
 <head>
     <title>Boémio Bar & Tapas</title>
-    <link rel="stylesheet" type="text/css" href="https://gbarradas.github.io/menu.css">
+    <link rel="stylesheet" type="text/css" href="menu.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 </head>
   <header>
 
         <div id="image" style="float:left;">
-            <a href="/frontpage.html"><img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/logo_ini.png?raw=true" align="left" height="60px" width="165px"></a>
+            <a href="/Boemio/frontpage.html"><img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/logo_ini.png?raw=true" align="left" height="60px" width="165px"></a>
         </div>
         <div id="text" style="float: left;">
             <h1 class="espaçar">.........</h1>
         </div>
 
         <div id="text" style="float: left;">
-            <a href="/menu.html" style="text-decoration:none">
+            <a href="/Boemio/menu.html" style="text-decoration:none">
                 <button class="botão "><h1>Menu</h1></button></div>
         </a>
         <div id="text " style="float: left; ">
-            <a href="/fotos.html " style="text-decoration:none"><button class="botão "><h1>Fotos e Videos</h1></button></a>
+            <a href="/Boemio/fotos.html " style="text-decoration:none"><button class="botão "><h1>Fotos e Videos</h1></button></a>
         </div>
         <div id="text" style="float: left;">
-            <a href="/Localização.html" style="text-decoration:none"><button class="botão2" ><h1>Localização e contactos</h1></button></a>
+            <a href="/Boemio/Localização.html" style="text-decoration:none"><button class="botão2" ><h1>Localização e contactos</h1></button></a>
         </div>
        
     </header>
