--- a/Boemio/fotos.html
+++ b/Boemio/fotos.html
@@ -8,27 +8,27 @@
 <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
 <head>
     <title>Boémio Bar & Tapas</title>
-    <link rel="stylesheet" type="text/css" href="https://gbarradas.github.io/menu.css">
+    <link rel="stylesheet" type="text/css" href="menu.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 </head>
   <header>
 
         <div id="image" style="float:left;">
-            <a href="/frontpage.html"><img src="https://lh3.googleusercontent.com/9vkdrTH7SCIY10igsPLQ7KfoCLRQxc8fMjpCSumIi-kNVIW6i-kVpOavjYOfgLwn8xsQSl2aBpJH_MIOiY6jhYVcK0sVWj66NQ8kU4skrMvYqt59JZ2kOGC3044Wz2Yef7eqnS38e7Iu6KOwH4TiecOKSvecdTjxh8VxgKyyMNM7tgm_EEfs4b6bu0VTK8N5hZ7D1jxfXQImOtlLe7siLNcJGfS8LwXGzCOrtnaAP3BQBU8mgRlFuU1__lKXvVcKWaR09K1oHhaEwIcY7EVIQGcxISLg9DUZJJPxYwDbOqP8YGRTDMbTR8H4qvgyakly3prawGsSW0Mlz7zTAhCXsCjIxzuAuk8boPGCQ7lPNW2YyVw7VDwHMwQc70WN0RCqM3W5-GM3SwI6z4Ip7zX6mnZOljaUIusLvWXqnNTlo8iBav6b7imJe1Pduwhw77nnTgzB63PJ1QsLhzxJGvKegAAS6tUYuKzZ8w61l5qlFYg8vLEEylawnJuPiqxkfS58y54oNztpeUhOYxz4tyIspqbu0JfP3Ajnh7WjcocS_IMbeqGEqSwcaMM2k9dNstrF7FUJmIDS2cpE8XVNIfVYE7WjPQWv2fK6EPahtIJKxHWRAa1fsQ7zFKYImSsGS3HqE7GynC_PiTWT7LUOvDScC2R8UNnEHi-Jn_hdjgE43RPQIlJTShT6iURCtLPx071gz6tqWLe92Nkj-5dSccA-xoE=w650-h290-no?authuser=0" align="left" height="60px" width="165px"></a>
+            <a href="/Boemio/frontpage.html"><img src="https://lh3.googleusercontent.com/9vkdrTH7SCIY10igsPLQ7KfoCLRQxc8fMjpCSumIi-kNVIW6i-kVpOavjYOfgLwn8xsQSl2aBpJH_MIOiY6jhYVcK0sVWj66NQ8kU4skrMvYqt59JZ2kOGC3044Wz2Yef7eqnS38e7Iu6KOwH4TiecOKSvecdTjxh8VxgKyyMNM7tgm_EEfs4b6bu0VTK8N5hZ7D1jxfXQImOtlLe7siLNcJGfS8LwXGzCOrtnaAP3BQBU8mgRlFuU1__lKXvVcKWaR09K1oHhaEwIcY7EVIQGcxISLg9DUZJJPxYwDbOqP8YGRTDMbTR8H4qvgyakly3prawGsSW0Mlz7zTAhCXsCjIxzuAuk8boPGCQ7lPNW2YyVw7VDwHMwQc70WN0RCqM3W5-GM3SwI6z4Ip7zX6mnZOljaUIusLvWXqnNTlo8iBav6b7imJe1Pduwhw77nnTgzB63PJ1QsLhzxJGvKegAAS6tUYuKzZ8w61l5qlFYg8vLEEylawnJuPiqxkfS58y54oNztpeUhOYxz4tyIspqbu0JfP3Ajnh7WjcocS_IMbeqGEqSwcaMM2k9dNstrF7FUJmIDS2cpE8XVNIfVYE7WjPQWv2fK6EPahtIJKxHWRAa1fsQ7zFKYImSsGS3HqE7GynC_PiTWT7LUOvDScC2R8UNnEHi-Jn_hdjgE43RPQIlJTShT6iURCtLPx071gz6tqWLe92Nkj-5dSccA-xoE=w650-h290-no?authuser=0" align="left" height="60px" width="165px"></a>
         </div>
         <div id="text" style="float: left;">
             <h1 class="espaçar">.........</h1>
         </div>
 
         <div id="text" style="float: left;">
-            <a href="/menu.html" style="text-decoration:none">
+            <a href="/Boemio/menu.html" style="text-decoration:none">
                 <button class="botão "><h1>Menu</h1></button></div>
         </a>
         <div id="text " style="float: left; ">
-            <a href="/fotos.html " style="text-decoration:none"><button class="botão2 "><h1>Fotos e Videos</h1></button></a>
+            <a href="/Boemio/fotos.html " style="text-decoration:none"><button class="botão2 "><h1>Fotos e Videos</h1></button></a>
         </div>
         <div id="text" style="float: left;">
-            <a href="/Localização.html" style="text-decoration:none"><button class="botão" ><h1>Localização e contactos</h1></button></a>
+            <a href="/Boemio/Localização.html" style="text-decoration:none"><button class="botão" ><h1>Localização e contactos</h1></button></a>
         </div>
         
     </header>
@@ -39,7 +39,7 @@
         <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/3.jpg?raw=true" class="foto" width="360" height="270">
         <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/logo%20black%20center.png?raw=true" class="foto" width="360" height="270">
         <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/5.jpg?raw=true" class="foto" width="360" height="270"><br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/AaffwQZQjC0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/AaffwQZQjC0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/9.jpg?raw=true" class="foto" width="360" height="270">
         <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/2.jpg?raw=true" class="foto" width="360" height="270">
         <img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/8.jpg?raw=true" class="foto" width="360" height="270">
