--- a/Boemio/frontpage.html
+++ b/Boemio/frontpage.html
@@ -14,7 +14,7 @@
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+<link rel="apple-touchhttps://gbarradas.github.io/application.css-icon" sizes="76x76" href="/apple-icon-76x76.png">
 <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
 <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
 <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
@@ -28,7 +28,7 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="https://gbarradas.github.io/application.css">
+    <link rel="stylesheet" href="application.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 </head>
 
@@ -36,21 +36,21 @@
     <header>
 
         <div id="image" style="float:left;">
-            <a href="/frontpage.html"><img src="https://lh3.googleusercontent.com/9vkdrTH7SCIY10igsPLQ7KfoCLRQxc8fMjpCSumIi-kNVIW6i-kVpOavjYOfgLwn8xsQSl2aBpJH_MIOiY6jhYVcK0sVWj66NQ8kU4skrMvYqt59JZ2kOGC3044Wz2Yef7eqnS38e7Iu6KOwH4TiecOKSvecdTjxh8VxgKyyMNM7tgm_EEfs4b6bu0VTK8N5hZ7D1jxfXQImOtlLe7siLNcJGfS8LwXGzCOrtnaAP3BQBU8mgRlFuU1__lKXvVcKWaR09K1oHhaEwIcY7EVIQGcxISLg9DUZJJPxYwDbOqP8YGRTDMbTR8H4qvgyakly3prawGsSW0Mlz7zTAhCXsCjIxzuAuk8boPGCQ7lPNW2YyVw7VDwHMwQc70WN0RCqM3W5-GM3SwI6z4Ip7zX6mnZOljaUIusLvWXqnNTlo8iBav6b7imJe1Pduwhw77nnTgzB63PJ1QsLhzxJGvKegAAS6tUYuKzZ8w61l5qlFYg8vLEEylawnJuPiqxkfS58y54oNztpeUhOYxz4tyIspqbu0JfP3Ajnh7WjcocS_IMbeqGEqSwcaMM2k9dNstrF7FUJmIDS2cpE8XVNIfVYE7WjPQWv2fK6EPahtIJKxHWRAa1fsQ7zFKYImSsGS3HqE7GynC_PiTWT7LUOvDScC2R8UNnEHi-Jn_hdjgE43RPQIlJTShT6iURCtLPx071gz6tqWLe92Nkj-5dSccA-xoE=w650-h290-no?authuser=0" align="left" height="60px" width="165px"></a>
+            <a href="/Boemio/frontpage.html"><img src="../Imagens/logo black center.png" align="left" height="60px" width="165px"></a>
         </div>
         <div id="text" style="float: left;">
             <h1 class="espaçar">.........</h1>
         </div>
 
         <div id="text" style="float: left;">
-            <a href="/menu.html" style="text-decoration:none">
+            <a href="/Boemio/menu.html" style="text-decoration:none">
                 <button class="botão "><h1>Menu</h1></button></div>
         </a>
         <div id="text " style="float: left; ">
-            <a href="/fotos.html " style="text-decoration:none"><button class="botão "><h1>Fotos e Videos</h1></button></a>
+            <a href="/Boemio/fotos.html" style="text-decoration:none"><button class="botão "><h1>Fotos e Videos</h1></button></a>
         </div>
         <div id="text" style="float: left;">
-            <a href="/Localização.html" style="text-decoration:none"><button class="botão" ><h1>Localização e contactos</h1></button></a>
+            <a href="/Boemio/Localização.html" style="text-decoration:none"><button class="botão" ><h1>Localização e contactos</h1></button></a>
         </div>
         <div id="text" style="float: left;">
             <h1 class="espaçar">...............</h1>
