--- a/UE/EI/index.html
+++ b/UE/EI/index.html
@@ -125,7 +125,7 @@
     </table>
    
         <div id="terminal"></div>
-        <script>initTable(table)</script>
+        <script>initTable(table);geiInfo()</script>
         <br><br>
     </body>
 </html>
