--- a/UE/Praxes/Catarina.html
+++ b/UE/Praxes/Catarina.html
@@ -8,9 +8,7 @@
     <body>
         <br><br><br><br><br><br>
         <div class ="box">
-       <!--<h1 class="pergunta">Tu es Chata <br>Mas eu adoro-te
-       </h1>-->
-            <h1>Qual é que não sabes maçarico</h1>
+       <h1 class="pergunta">Parabens <br> Chatinha       </h1>
         
 </div>
         </body>
