--- a/Boemio/Localização.html
+++ b/Boemio/Localização.html
@@ -14,7 +14,7 @@
   <header>
 
         <div id="image" style="float:left;">
-            <a href="/Boemio/frontpage.html"><img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/logo_ini.png?raw=true" align="left" height="60px" width="165px"></a>
+            <a href="/Boemio/frontpage.html"><img src="/Imagens/logo_ini.png?raw=true" align="left" height="60px" width="165px"></a>
         </div>
         <div id="text" style="float: left;">
             <h1 class="espaçar">.........</h1>
@@ -41,9 +41,9 @@
             <div class="col span_1_of_2">
                 <h1>Contactos</h1>
                 <div>
-                    <a href="tel: +351 962898982" <p></p><img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/telefone.png?raw=true" height="25px" style="margin-right: 20px;" width="25px"> +351 962 898 982</p>
+                    <a href="tel: +351 962898982" <p></p><img src="/Imagens/telefone.png?raw=true" height="25px" style="margin-right: 20px;" width="25px"> +351 962 898 982</p>
                     </a>
-                    <a href="mailto:joaopaulo@boemio.pt" <p></p><img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/email.png?raw=true" height="25px" style="margin-right: 15px;" width="30px">joaopaulo@boemio.pt</p>
+                    <a href="mailto:joaopaulo@boemio.pt" <p></p><img src="/Imagens/email.png?raw=true" height="25px" style="margin-right: 15px;" width="30px">joaopaulo@boemio.pt</p>
                     </a>
                     <a href="https://www.facebook.com/Bo%C3%A9mio-Bar-Tapas-108673291396443" target="_blank" <p></p><img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/20673.png?raw=true" height="25px" style="margin-right: 20px;" width="25px">Facebook/Boémio Bar & Tapas</p>
                     </a>
@@ -59,7 +59,7 @@
 
             <div class="col span_1_of_2">
                 <h1>Localização</h1>
-                <a href="https://www.google.pt/maps/place/Rua+dos+Pescadores+10,+8950-411+Altura/@37.1727565,-7.4996594,20z/data=!4m5!3m4!1s0xd1019138faf6f53:0x570bdf2dddbd9ac3!8m2!3d37.1727007!4d-7.4995536" target="_blank" <p></p><img src="https://github.com/GBarradas/Gbarradas.github.io/blob/main/Imagens/alfinete.png?raw=true" height="25px" style="margin-right: 15px;" width="25px">Rua dos Pescadores nº10- Alagoa Altura 8950-417 Alagoa</p>
+                <a href="https://www.google.pt/maps/place/Rua+dos+Pescadores+10,+8950-411+Altura/@37.1727565,-7.4996594,20z/data=!4m5!3m4!1s0xd1019138faf6f53:0x570bdf2dddbd9ac3!8m2!3d37.1727007!4d-7.4995536" target="_blank" <p></p><img src="/Imagens/alfinete.png?raw=true" height="25px" style="margin-right: 15px;" width="25px">Rua dos Pescadores nº10- Alagoa Altura 8950-417 Alagoa</p>
                 </a><br>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d246.7536523540847!2d-7.499635123490184!3d37.17278791418816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1019138faf6f53%3A0x570bdf2dddbd9ac3!2sRua%20dos%20Pescadores%2010%2C%208950-411%20Altura!5e0!3m2!1spt-PT!2spt!4v1622736318437!5m2!1spt-PT!2spt" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
