--- a/UE/Praxes/Despesas/index.html
+++ b/UE/Praxes/Despesas/index.html
@@ -3,7 +3,8 @@
     <head>
         <link rel="icon" href="img/boc.jpg" />
          <link rel="stylesheet" type="text/css" href="css/style.css">
-        <script src="js/main.js" ></script>
+         <script src="js/info.js " ></script>
+        <script src="js/main.js " ></script>
         <title>Despesas Praxes</title>
     </head>
     <body>
