--- a/UE/Praxes/Despesas/index.html
+++ b/UE/Praxes/Despesas/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-pt">
     <head>
+        <meta charset="utf-8">
         <link rel="icon" href="img/boc.jpg" />
          <link rel="stylesheet" type="text/css" href="css/style.css">
          <script src="js/info.js " ></script>
